force-app/main/default/objects/Bonus_Plan__c/Bonus_Plan__c.object-meta.xml
<CustomObject>
    <label>Bonus Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>