force-app/main/default/objects/Bonus_Plan__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Bonus Plan</relationshipLabel>
    <relationshipName>Bonus_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>