force-app/main/default/objects/Bonus_Plan__c/fields/Increment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Increment_Amount__c</fullName>
    <label>Increment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>