force-app/main/default/objects/Bonus_Plan__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Semi-Annually</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>