force-app/main/default/objects/Bonus_Plan__c/fields/Percentage_Increments__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Increments__c</fullName>
    <label>Percentage Increments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>