force-app/main/default/objects/Bonus_Plan__c/recordTypes/Accelerator_Bonus.recordType-meta.xml
<RecordType>
    <fullName>Accelerator_Bonus</fullName>
    <active>true</active>
    <label>Accelerator Bonus</label>
</RecordType>