force-app/main/default/objects/Bonus_Plan__c/recordTypes/Standard_Bonus.recordType-meta.xml
<RecordType>
    <fullName>Standard_Bonus</fullName>
    <active>true</active>
    <label>Standard Bonus</label>
</RecordType>